Updated index.html with a new modern landing page design.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACD Indicator for MetaTrader 5</title>
+    <title>Premium Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>ACD Indicator for MetaTrader 5</h1>
-        <p>This is the ACD indicator for MetaTrader 5.</p>
-        <a href="download/acd_indicator.zip" class="download-button" style="background-color: blue; color: white; padding: 10px 20px; text-decoration: none;">Download</a>
-    </div>
+    <header>
+        <h1>Welcome to Infinity Algo Academy</h1>
+        <nav>
+            <ul>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="hero">
+        <h2>Your Path to Success Starts Here</h2>
+        <p>Join us today and unlock your potential.</p>
+        <a href="#signup" class="btn">Get Started</a>
+    </section>
+    <section id="features">
+        <h2>Features</h2>
+        <div class="feature"><h3>Advanced Analytics</h3><p>Track your progress with our detailed analytics.</p></div>
+        <div class="feature"><h3>Interactive Elements</h3><p>Engage with interactive tools and resources.</p></div>
+        <div class="feature"><h3>Responsive Design</h3><p>Access content on any device with a seamless experience.</p></div>
+    </section>
+    <section id="testimonials">
+        <h2>What Our Users Say</h2>
+        <blockquote>
+            <p>"This platform transformed my trading!" - Alex</p>
+        </blockquote>
+        <blockquote>
+            <p>"Incredible resources and support!" - Jamie</p>
+        </blockquote>
+    </section>
+    <section id="pricing">
+        <h2>Pricing Plans</h2>
+        <div class="plan">
+            <h3>Basic</h3>
+            <p>$19/mo</p>
+            <p>Access to basic features.</p>
+        </div>
+        <div class="plan">
+            <h3>Pro</h3>
+            <p>$49/mo</p>
+            <p>Access to all features and support.</p>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; 2026 Infinity Algo Academy. All rights reserved.</p>
+    </footer>
+    <script>
+        // Animation and tracking scripts
+        $(document).ready(function() {
+            // Scroll animations
+        });
+        // Analytics tracking code here
+    </script>
 </body>
 </html>
