Move contact info to Footer and About Us page

--- a/about.html
+++ b/about.html
@@ -66,28 +66,6 @@
 
     <!-- Header -->
     <header>
-        <!-- Top Bar -->
-        <div class="top-bar">
-            <div class="top-bar-container">
-                <div class="top-bar-info">
-                    <span><i class="fas fa-phone"></i> +213 795 97 57 12</span>
-                    <span><i class="fas fa-envelope"></i> me@infinityalgoacademy.net</span>
-                    <a href="https://t.me/King_arius_dz" target="_blank"><i class="fab fa-telegram-plane"></i>
-                        @King_arius_dz</a>
-                </div>
-                <div class="top-bar-links">
-                    <a href="https://infinityalgoacademy.net" target="_blank" title="Website"><i
-                            class="fas fa-globe"></i></a>
-                    <a href="https://infinityalgoacademy.net/community" target="_blank" title="Community"><i
-                            class="fas fa-users"></i></a>
-                    <a href="https://infinityalgoacademy.net/shop" target="_blank" title="Shop"><i
-                            class="fas fa-shopping-cart"></i></a>
-                    <a href="https://t.me/InfinityAlgo_Group_Topics" target="_blank" title="Telegram Channel"><i
-                            class="fab fa-telegram"></i></a>
-                </div>
-            </div>
-        </div>
-
         <div class="nav-container">
             <div class="nav-wrapper">
                 <div class="logo">InfinityAlgo</div>
@@ -173,28 +151,47 @@
                             تكتيكات التسويق قصيرة المدى.</p>
                     </div>
 
-                    <div class="about-card">
-                        <h3><i class="fas fa-users"></i> من نخدم؟</h3>
-                        <ul style="list-style: disc; padding-right: 1.5rem; color: var(--text-muted);">
-                            <li>تجار التجزئة الباحثين عن أدوات احترافية.</li>
-                            <li>المتداولين الخوارزميين (Algo Traders).</li>
-                            <li>المهتمين بالتحليل الفني والاستراتيجيات المهيكلة.</li>
-                        </ul>
+                    <div class="about-grid">
+                        <div class="about-card">
+                            <h3><i class="fas fa-users"></i> من نخدم؟</h3>
+                            <ul style="list-style: disc; padding-right: 1.5rem; color: var(--text-muted);">
+                                <li>تجار التجزئة الباحثين عن أدوات احترافية.</li>
+                                <li>المتداولين الخوارزميين (Algo Traders).</li>
+                                <li>المهتمين بالتحليل الفني والاستراتيجيات المهيكلة.</li>
+                            </ul>
+                        </div>
+
+                        <div class="about-card">
+                            <h3><i class="fas fa-address-book"></i> تواصل معنا</h3>
+                            <ul style="list-style: none; padding: 0; color: var(--text-muted);">
+                                <li style="margin-bottom: 0.5rem;"><i class="fas fa-phone"
+                                        style="color: var(--primary); margin-left: 0.5rem;"></i> +213 795 97 57 12</li>
+                                <li style="margin-bottom: 0.5rem;"><i class="fas fa-envelope"
+                                        style="color: var(--primary); margin-left: 0.5rem;"></i>
+                                    me@infinityalgoacademy.net</li>
+                                <li><i class="fab fa-telegram-plane"
+                                        style="color: var(--primary); margin-left: 0.5rem;"></i> <a
+                                        href="https://t.me/King_arius_dz" target="_blank">@King_arius_dz</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
 
-                <div class="about-card" style="margin-top: 2rem; border-color: var(--accent);">
-                    <h3><i class="fas fa-exclamation-triangle" style="color: var(--accent);"></i> الشفافية وتنويه</h3>
-                    <p>
-                        لا تقدم Infinity Algo Academy مشورة مالية أو توصيات استثمارية. جميع أدوات التداول مقدمة للأغراض
-                        التعليمية والتحليلية فقط. التداول ينطوي على مخاطر، والأداء السابق لا يضمن النتائج المستقبلية.
-                    </p>
-                    <p><strong>التزامنا:</strong> نحن ملتزمون بتحسين منصتنا باستمرار، وتوسيع مكتبة أدواتنا، والحفاظ على
-                        الشفافية مع مستخدمينا.</p>
-                </div>
+                    <div class="about-card" style="margin-top: 2rem; border-color: var(--accent);">
+                        <h3><i class="fas fa-exclamation-triangle" style="color: var(--accent);"></i> الشفافية وتنويه
+                        </h3>
+                        <p>
+                            لا تقدم Infinity Algo Academy مشورة مالية أو توصيات استثمارية. جميع أدوات التداول مقدمة
+                            للأغراض
+                            التعليمية والتحليلية فقط. التداول ينطوي على مخاطر، والأداء السابق لا يضمن النتائج
+                            المستقبلية.
+                        </p>
+                        <p><strong>التزامنا:</strong> نحن ملتزمون بتحسين منصتنا باستمرار، وتوسيع مكتبة أدواتنا، والحفاظ
+                            على
+                            الشفافية مع مستخدمينا.</p>
+                    </div>
 
+                </div>
             </div>
-        </div>
     </section>
 
     <!-- Footer -->
@@ -203,10 +200,18 @@
             <h3>InfinityAlgo Academy</h3>
             <p>نقدم أفضل الحلول البرمجية للمتداولين حول العالم.</p>
 
+            <div class="footer-contact">
+                <div><i class="fas fa-phone"></i> +213 795 97 57 12</div>
+                <div><i class="fas fa-envelope"></i> me@infinityalgoacademy.net</div>
+                <a href="https://t.me/King_arius_dz" target="_blank"><i class="fab fa-telegram-plane"></i>
+                    @King_arius_dz</a>
+            </div>
+
             <div class="socials">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://infinityalgoacademy.net" target="_blank"><i class="fas fa-globe"></i></a>
+                <a href="https://infinityalgoacademy.net/shop" target="_blank"><i class="fas fa-shopping-cart"></i></a>
+                <a href="https://infinityalgoacademy.net/community" target="_blank"><i class="fas fa-users"></i></a>
+                <a href="https://t.me/InfinityAlgo_Group_Topics" target="_blank"><i class="fab fa-telegram"></i></a>
                 <a href="https://github.com/InfinityAlgo-Academy" target="_blank"><i class="fab fa-github"></i></a>
             </div>
 
