--- a/index.html
+++ b/index.html
@@ -25,28 +25,6 @@
 
     <!-- Header -->
     <header>
-        <!-- Top Bar -->
-        <div class="top-bar">
-            <div class="top-bar-container">
-                <div class="top-bar-info">
-                    <span><i class="fas fa-phone"></i> +213 795 97 57 12</span>
-                    <span><i class="fas fa-envelope"></i> me@infinityalgoacademy.net</span>
-                    <a href="https://t.me/King_arius_dz" target="_blank"><i class="fab fa-telegram-plane"></i>
-                        @King_arius_dz</a>
-                </div>
-                <div class="top-bar-links">
-                    <a href="https://infinityalgoacademy.net" target="_blank" title="Website"><i
-                            class="fas fa-globe"></i></a>
-                    <a href="https://infinityalgoacademy.net/community" target="_blank" title="Community"><i
-                            class="fas fa-users"></i></a>
-                    <a href="https://infinityalgoacademy.net/shop" target="_blank" title="Shop"><i
-                            class="fas fa-shopping-cart"></i></a>
-                    <a href="https://t.me/InfinityAlgo_Group_Topics" target="_blank" title="Telegram Channel"><i
-                            class="fab fa-telegram"></i></a>
-                </div>
-            </div>
-        </div>
-
         <div class="nav-container">
             <div class="nav-wrapper">
                 <div class="logo">ACD Indicator</div>
@@ -1061,10 +1039,18 @@
             <h3>InfinityAlgo Academy</h3>
             <p>نقدم أفضل الحلول البرمجية للمتداولين حول العالم.</p>
 
+            <div class="footer-contact">
+                <div><i class="fas fa-phone"></i> +213 795 97 57 12</div>
+                <div><i class="fas fa-envelope"></i> me@infinityalgoacademy.net</div>
+                <a href="https://t.me/King_arius_dz" target="_blank"><i class="fab fa-telegram-plane"></i>
+                    @King_arius_dz</a>
+            </div>
+
             <div class="socials">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://infinityalgoacademy.net" target="_blank"><i class="fas fa-globe"></i></a>
+                <a href="https://infinityalgoacademy.net/shop" target="_blank"><i class="fas fa-shopping-cart"></i></a>
+                <a href="https://infinityalgoacademy.net/community" target="_blank"><i class="fas fa-users"></i></a>
+                <a href="https://t.me/InfinityAlgo_Group_Topics" target="_blank"><i class="fab fa-telegram"></i></a>
                 <a href="https://github.com/InfinityAlgo-Academy" target="_blank"><i class="fab fa-github"></i></a>
             </div>
 
