--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
     <!-- Header -->
     <header class="site-header">
-        <div class="main-container header-inner">
+        <div class="header-inner">
             <!-- Logo -->
             <a href="index.html" class="logo">InfinityAlgo</a>
 
